plugins {
    alias(libs.plugins.kotlin.jvm)
    id("org.graalvm.buildtools.native") version "0.10.5"
    id 'application'
}

def lwjglVersion = "3.3.4"

def os = org.gradle.internal.os.OperatingSystem.current()
def lwjglNatives = null

if (os.isWindows()) {
    lwjglNatives = "natives-windows"
} else if (os.isMacOsX()) {
    lwjglNatives = "natives-macos"
} else if (os.isLinux()) {
    lwjglNatives = "natives-linux"
}

repositories {
    mavenCentral()
    maven { url "https://central.sonatype.com/repository/maven-snapshots" }
}


dependencies {

    implementation "org.lwjgl:lwjgl:${lwjglVersion}"
    implementation "org.lwjgl:lwjgl:${lwjglVersion}:${lwjglNatives}"

    implementation "org.lwjgl:lwjgl-glfw:${lwjglVersion}"
    implementation "org.lwjgl:lwjgl-glfw:${lwjglVersion}:${lwjglNatives}"

    implementation "org.lwjgl:lwjgl-opengl:${lwjglVersion}"
    implementation "org.lwjgl:lwjgl-opengl:${lwjglVersion}:${lwjglNatives}"

    implementation "org.lwjgl:lwjgl-openal:${lwjglVersion}"
    implementation "org.lwjgl:lwjgl-openal:${lwjglVersion}:${lwjglNatives}"

    implementation "org.lwjgl:lwjgl-stb:${lwjglVersion}"
    implementation "org.lwjgl:lwjgl-stb:${lwjglVersion}:${lwjglNatives}"

    implementation "org.lwjgl:lwjgl-assimp:${lwjglVersion}"
    implementation "org.lwjgl:lwjgl-assimp:${lwjglVersion}:${lwjglNatives}"

    implementation libs.guava

    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    testImplementation libs.junit.jupiter.engine
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
        vendor.set(JvmVendorSpec.matching("GraalVM"))
    }
}

application {
    mainClass = 'org.example.AppKt'
}


graalvmNative {
    binaries {
        main {
            imageName = "HelloOpenGL"

            if (os.isLinux()){
                buildArgs.add("-H:IncludeResources=.*\\.so")
            }
            if (os.isWindows()){
                buildArgs.add("--initialize-at-run-time=org.lwjgl")
                buildArgs.add("-H:IncludeResources=.*\\.dll")
            }
            if (os.isMacOsX()){
                buildArgs.add("-H:IncludeResources=.*\\.dylib")
            }
            buildArgs.add("--enable-native-access=ALL-UNNAMED")
            buildArgs.add("--no-fallback")
        }
    }
}



tasks.named('test') {
    useJUnitPlatform()
}
